deleted duplication in pom